[package]
name = "cache-pseudo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cache-pseudo"
path = "src/main.rs"

[[bin]]
name = "generate-mock"
path = "src/generate_mock.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
tonic = "0.10"
prost = "0.12"
futures = "0.3"

[build-dependencies]
tonic-build = "0.10"
