[package]
name = "cache-pseudo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cache-pseudo"
path = "src/main.rs"

[[bin]]
name = "generate-mock"
path = "src/generate_mock.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
dashmap = "6.1.0"
reqwest = { version = "0.12.12", features = ["json"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rand = "0.9.0"
tonic = "0.12.3"
prost = "0.13"
futures = "0.3.31"

[build-dependencies]
tonic-build = "0.12.3"
